--- a/index.html
+++ b/index.html
@@ -1,317 +1,209 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Alora | Reservaciones</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Alora | Fusión Boritaly</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
 :root{
-  --bg:#0f1210;
-  --card:rgba(255,255,255,.05);
-  --line:rgba(255,255,255,.12);
-  --accent:#c26a4a;
-  --accent2:#2a4a3a;
+  --olive:#5f5d46;
+  --olive-dark:#4f4d38;
+  --cream:#F3EFE6;
+  --muted:#d9d4c8;
 }
+
+*{margin:0;padding:0;box-sizing:border-box;}
+
 body{
-  margin:0;
   font-family:Inter,sans-serif;
-  background:
-    radial-gradient(800px 600px at 10% 10%, rgba(194,106,74,.2), transparent),
-    radial-gradient(900px 700px at 90% 20%, rgba(42,74,58,.25), transparent),
-    var(--bg);
-  color:white;
+  background:linear-gradient(180deg,var(--olive) 0%, var(--olive-dark) 100%);
+  color:var(--cream);
+  overflow-x:hidden;
 }
-.wrap{
-  max-width:1000px;
+
+/* HERO */
+
+.hero{
+  height:100vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  padding:20px;
+}
+
+.logo-main{
+  width:100%;
+  max-width:600px;
+  height:auto;
+  object-fit:contain;
+  filter:drop-shadow(0 30px 60px rgba(0,0,0,0.5));
+  animation:fadeUp 1.5s ease forwards;
+}
+
+.tagline{
+  margin-top:30px;
+  font-size:14px;
+  letter-spacing:2px;
+  text-transform:uppercase;
+  color:var(--muted);
+  opacity:0;
+  animation:fadeUp 1.5s ease forwards;
+  animation-delay:.4s;
+}
+
+/* SCROLL SECTION */
+
+.section{
+  padding:120px 20px;
+  max-width:900px;
   margin:auto;
-  padding:40px 20px 80px;
+  text-align:center;
+  opacity:0;
+  transform:translateY(60px);
+  transition:all 1s ease;
 }
-h1{
+
+.section.visible{
+  opacity:1;
+  transform:translateY(0);
+}
+
+.section h2{
   font-family:"Playfair Display",serif;
   font-size:42px;
-  margin-bottom:8px;
-}
-.subtitle{
-  color:rgba(255,255,255,.7);
   margin-bottom:30px;
 }
-.card{
-  background:var(--card);
-  border:1px solid var(--line);
-  border-radius:20px;
-  padding:25px;
-  box-shadow:0 20px 60px rgba(0,0,0,.4);
-}
-label{
-  font-size:13px;
-  color:rgba(255,255,255,.75);
-  margin-top:12px;
-  display:block;
-}
-input,select{
-  width:100%;
-  padding:12px;
-  margin-top:6px;
-  border-radius:12px;
-  border:1px solid var(--line);
-  background:rgba(0,0,0,.3);
-  color:white;
-}
-button{
-  padding:14px 20px;
-  border:none;
-  border-radius:14px;
-  font-weight:600;
-  cursor:pointer;
-  margin-top:15px;
-}
-.primary{
-  background:linear-gradient(135deg,var(--accent),rgba(194,106,74,.7));
-  color:black;
-}
-.secondary{
-  background:rgba(255,255,255,.08);
-  border:1px solid var(--line);
-  color:white;
-}
-.guest{
-  border:1px solid var(--line);
-  padding:15px;
-  border-radius:15px;
-  margin-top:15px;
-}
-.total{
-  margin-top:20px;
+
+.section p{
   font-size:18px;
+  line-height:1.7;
+  color:var(--muted);
 }
-#toast{
-  margin-top:20px;
-  padding:15px;
-  border-radius:14px;
-  display:none;
+
+/* MARK */
+
+.mark-section{
+  padding:120px 0;
+  text-align:center;
+  opacity:0;
+  transform:translateY(60px);
+  transition:all 1s ease;
 }
-.success{ background:#2ecc71; color:black; }
-.error{ background:#ff5c5c; color:white; }
-.warn{ background:#f1c40f; color:black; }
+
+.mark-section.visible{
+  opacity:1;
+  transform:translateY(0);
+}
+
+.logo-mark{
+  width:140px;
+  height:auto;
+  opacity:.95;
+}
+
+/* BUTTON */
+
+.reserve-btn{
+  margin-top:50px;
+  padding:16px 40px;
+  background:var(--cream);
+  color:var(--olive-dark);
+  font-weight:600;
+  letter-spacing:1px;
+  border:none;
+  border-radius:40px;
+  cursor:pointer;
+  transition:all .4s ease;
+}
+
+.reserve-btn:hover{
+  background:white;
+  transform:translateY(-3px);
+  box-shadow:0 15px 40px rgba(0,0,0,.4);
+}
+
+/* ANIMATION */
+
+@keyframes fadeUp{
+  from{
+    opacity:0;
+    transform:translateY(40px);
+  }
+  to{
+    opacity:1;
+    transform:translateY(0);
+  }
+}
+
+/* RESPONSIVE */
+
+@media(max-width:768px){
+  .section h2{font-size:30px;}
+  .section p{font-size:16px;}
+}
 </style>
 </head>
 
 <body>
-<div class="wrap">
-  <h1>Alora</h1>
-  <p class="subtitle">Experiencia gastronómica · Reservación con pre-orden</p>
 
-  <div class="card">
-    <label>Cliente</label>
-    <input id="cliente"/>
-
-    <label>Teléfono</label>
-    <input id="telefono"/>
-
-    <label>Función</label>
-    <select id="funcion"></select>
-
-    <label>Hora</label>
-    <select id="hora"></select>
-
-    <h3 style="margin-top:30px;">Personas</h3>
-    <div id="guests"></div>
-
-    <button class="secondary" id="addGuestBtn">+ Añadir Persona</button>
-    <button class="primary" id="submitBtn">Confirmar Reservación</button>
-
-    <div class="total">Total estimado: <span id="total">$0.00</span></div>
-    <div id="toast"></div>
+<!-- HERO -->
+<section class="hero">
+  <img src="7E279685-0A21-4575-9890-80E64F81A59E.png" class="logo-main" alt="Alora Logo">
+  
+  <div class="tagline">
+    Universidad Ana G. Méndez · Recinto de Carolina
   </div>
-</div>
+</section>
+
+<!-- CONCEPTO -->
+<section class="section reveal">
+  <h2>Fusión Boritaly</h2>
+  <p>
+    Un concepto de alta cocina donde la tradición italiana y la esencia puertorriqueña convergen en una propuesta sofisticada y contemporánea.
+    <br><br>
+    Desarrollado en la Universidad Ana G. Méndez, Recinto de Carolina, como un proyecto gastronómico profesional.
+    <br><br>
+    Alora trasciende lo académico para convertirse en una experiencia culinaria cuidadosamente diseñada, ejecutada y presentada con estándares de fine dining.
+    <br><br>
+    Próximamente abrimos nuestras puertas. Una experiencia abierta al público.
+    <br><br>
+    <strong>Tradición. Técnica. Elegancia.</strong>
+  </p>
+
+  <button class="reserve-btn" onclick="scrollToReservation()">
+    Reserva Próximamente
+  </button>
+</section>
+
+<!-- MARK SECTION -->
+<section class="mark-section reveal">
+  <img src="2BE6E097-CFDA-4844-A545-BCFA182CF730.png" class="logo-mark" alt="Alora Mark">
+</section>
 
 <script>
-/* ================= CONFIG ================= */
-const BACKEND_URL = "https://script.google.com/macros/s/AKfycbyOde3SksOR_CMmSDNrA7F-5ptCO78M7yr7dxG5Usty8E0hu6kE93PbSuTao0OeXsx-/exec";
-const SHARED_SECRET = "demo123";
 
-const PRECIO_ADULTO = 35;
-const PRECIO_NINO = 12.50;
+/* Scroll Reveal */
+const reveals = document.querySelectorAll(".reveal");
 
-const FUNCIONES = ["Función 1","Función 2","Función 3","Función 4","Función 5","Función 6","Función 7","Función 8"];
-const HORAS = ["5:30 PM","6:00 PM","6:30 PM","7:00 PM","7:30 PM","8:00 PM","8:30 PM","9:00 PM"];
-
-const MENU = {
-  aperitivos:["Arancini","Montaditos de Guiso"],
-  principales:["Pasta Vegana","Risotto de Calabaza","Rigatoni Salsa Setas"],
-  postres:["Dulce de Papaya","Flan Tiramisu"],
-  ninos:["Tenders","Mac and Cheese"]
-};
-
-const $=id=>document.getElementById(id);
-
-function fillSelect(el,arr){
-  el.innerHTML="";
-  arr.forEach(v=>{
-    const o=document.createElement("option");
-    o.value=v;
-    o.textContent=v;
-    el.appendChild(o);
-  });
-}
-
-function actualizarTotal(){
-  let total=0;
-  document.querySelectorAll(".tipoPersona").forEach(sel=>{
-    total+=sel.value==="nino"?PRECIO_NINO:PRECIO_ADULTO;
-  });
-  $("total").textContent="$"+total.toFixed(2);
-}
-
-function toast(msg,type){
-  const t=$("toast");
-  t.style.display="block";
-  t.className=type;
-  t.innerText=msg;
-}
-
-function guestTemplate(){
-  const div=document.createElement("div");
-  div.className="guest";
-
-  div.innerHTML=`
-    <label>Nombre Persona</label>
-    <input class="name"/>
-
-    <label>Tipo</label>
-    <select class="tipoPersona">
-      <option value="adulto">Adulto $35</option>
-      <option value="nino">Niño $12.50</option>
-    </select>
-
-    <div class="adulto">
-      <label>Aperitivo</label>
-      <select class="aperitivo"></select>
-      <label>Principal</label>
-      <select class="principal"></select>
-      <label>Postre</label>
-      <select class="postre"></select>
-    </div>
-
-    <div class="nino" style="display:none">
-      <label>Menú Niño</label>
-      <select class="principalNino"></select>
-    </div>
-  `;
-
-  fillSelect(div.querySelector(".aperitivo"),MENU.aperitivos);
-  fillSelect(div.querySelector(".principal"),MENU.principales);
-  fillSelect(div.querySelector(".postre"),MENU.postres);
-  fillSelect(div.querySelector(".principalNino"),MENU.ninos);
-
-  div.querySelector(".tipoPersona").onchange=e=>{
-    if(e.target.value==="nino"){
-      div.querySelector(".adulto").style.display="none";
-      div.querySelector(".nino").style.display="block";
-    }else{
-      div.querySelector(".adulto").style.display="block";
-      div.querySelector(".nino").style.display="none";
+window.addEventListener("scroll", () => {
+  reveals.forEach(el => {
+    const top = el.getBoundingClientRect().top;
+    if(top < window.innerHeight - 100){
+      el.classList.add("visible");
     }
-    actualizarTotal();
-  };
-
-  return div;
-}
-
-async function cargarHorasDisponibles(){
-  const sel=$("hora");
-  sel.innerHTML="";
-
-  for(const hora of HORAS){
-    try{
-      const res=await fetch(BACKEND_URL,{
-        method:"POST",
-        headers:{"Content-Type":"text/plain;charset=utf-8"},
-        body:JSON.stringify({
-          action:"availability",
-          hora,
-          funcion:$("funcion").value,
-          secret:SHARED_SECRET
-        })
-      });
-      if(!res.ok) continue;
-      const data=await res.json();
-      if(!data.full){
-        const disponibles = data?.disponibles ?? 0;
-        const opt=document.createElement("option");
-        opt.value=hora;
-        opt.textContent=`${hora} (${disponibles} disponibles)`;
-        sel.appendChild(opt);
-      }
-    }catch(e){}
-  }
-}
-
-async function submitReservation(){
-  const guests=Array.from(document.querySelectorAll(".guest")).map(g=>{
-    const tipo=g.querySelector(".tipoPersona").value;
-    if(tipo==="nino"){
-      return{
-        name:g.querySelector(".name").value,
-        aperitivo:"",
-        principal:g.querySelector(".principalNino").value,
-        postre:""
-      };
-    }
-    return{
-      name:g.querySelector(".name").value,
-      aperitivo:g.querySelector(".aperitivo").value,
-      principal:g.querySelector(".principal").value,
-      postre:g.querySelector(".postre").value
-    };
   });
-
-  try{
-    const res=await fetch(BACKEND_URL,{
-      method:"POST",
-      headers:{"Content-Type":"text/plain;charset=utf-8"},
-      body:JSON.stringify({
-        secret:SHARED_SECRET,
-        action:"create",
-        cliente:$("cliente").value,
-        phone:$("telefono").value,
-        funcion:$("funcion").value,
-        hora:$("hora").value,
-        guests
-      })
-    });
-    const data=await res.json();
-
-    if(data.ok){
-      toast("Reservación confirmada ✔","success");
-    }else if(data.full){
-      toast("Hora llena ⚠️","warn");
-    }else{
-      toast("Error en reservación","error");
-    }
-  }catch(e){
-    toast("Error de conexión","error");
-  }
-}
-
-document.addEventListener("DOMContentLoaded",()=>{
-  fillSelect($("funcion"),FUNCIONES);
-  $("funcion").addEventListener("change",cargarHorasDisponibles);
-  cargarHorasDisponibles();
-
-  $("addGuestBtn").onclick=()=>{
-    $("guests").appendChild(guestTemplate());
-    actualizarTotal();
-  };
-
-  $("submitBtn").onclick=submitReservation;
-
-  $("guests").appendChild(guestTemplate());
-  actualizarTotal();
 });
+
+/* Scroll placeholder */
+function scrollToReservation(){
+  alert("Próximamente activaremos el sistema de reservaciones.");
+}
+
 </script>
 
 </body>
