--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@ body{
     <strong>Tradición. Técnica. Elegancia.</strong>
   </p>
 
-  <button class="reserve-btn" onclick="scrollToReservation()">
-    Reserva Próximamente
-  </button>
+  <button class="reserve-btn" onclick="window.location.href='https://elsazon.github.io/Alora-Reserve/';">
+  Reserva Ahora
+</button>
 </section>
 
 <!-- MARK SECTION -->
