--- a/index.html
+++ b/index.html
@@ -493,6 +493,72 @@ input:focus,select:focus,textarea:focus{
   letter-spacing:2px;
   text-transform:uppercase;
 }
+    /* ===== ESPACIADO EDITORIAL ===== */
+
+/* Más altura en hero */
+.hero{
+  padding-top:140px !important;
+  padding-bottom:140px !important;
+}
+
+/* Más separación entre bloques */
+section.block{
+  padding-top:120px !important;
+  padding-bottom:120px !important;
+}
+
+/* Más aire dentro de tarjetas */
+.sectionCard{
+  padding:60px !important;
+}
+
+/* Más aire en formulario */
+.formCard{
+  padding:70px !important;
+}
+
+/* Más espacio en títulos */
+.sectionTitle{
+  margin-bottom:25px !important;
+}
+
+/* Más espacio en texto */
+.sectionText{
+  margin-bottom:20px !important;
+  line-height:1.9 !important;
+}
+    /* ===== PROFUNDIDAD VISUAL ===== */
+
+/* Fondo con más dimensión */
+body{
+  background:
+    radial-gradient(900px 600px at 15% 10%, rgba(194,106,74,.10), transparent 60%),
+    radial-gradient(1000px 700px at 85% 20%, rgba(79,81,56,.15), transparent 60%),
+    linear-gradient(180deg,var(--bg0),var(--bg1));
+}
+
+/* Tarjetas con más elevación */
+.sectionCard,
+.formCard{
+  backdrop-filter: blur(6px);
+  box-shadow:
+    0 40px 100px rgba(0,0,0,.65),
+    0 0 0 1px rgba(255,255,255,.03);
+}
+
+/* Botón con más profundidad */
+.btnPrimary{
+  box-shadow:
+    0 20px 50px rgba(194,106,74,.35),
+    0 0 0 1px rgba(255,255,255,.05);
+}
+
+/* Árbol con glow más integrado */
+.markRow img{
+  filter:
+    drop-shadow(0 0 18px rgba(191,161,90,.18))
+    drop-shadow(0 0 30px rgba(191,161,90,.08));
+}
   </style>
 </head>
 
