--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@ async function cargarMenu() {
       }
     }
 
-    document.addEventListener("DOMContentLoaded", ()=>{
+    document.addEventListener("DOMContentLoaded", async ()=>{
       $("year").textContent = new Date().getFullYear();
 
       // Menu
